updated trpc todo-backend with docs and readme
