# grpc/todo-backend/openapi.json
@@ -11,7 +11,7 @@
     }
   ],
   "paths": {
-    "/todo/getAll": {
+    "/todo.list": {
       "get": {
         "operationId": "todo-list",
         "tags": [
@@ -55,7 +55,7 @@
         }
       }
     },
-    "/todo/add": {
+    "/todo.add": {
       "post": {
         "operationId": "todo-add",
         "tags": [
@@ -115,22 +115,32 @@
         }
       }
     },
-    "/todo/{id}": {
-      "put": {
+    "/todo.complete": {
+      "post": {
         "operationId": "todo-complete",
         "tags": [
           "Todo"
         ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "number"
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "number"
+                  }
+                },
+                "required": [
+                  "id"
+                ],
+                "additionalProperties": false
+              }
             }
           }
-        ],
+        },
+        "parameters": [],
         "responses": {
           "200": {
             "description": "Successful response",
